###############################################
# Setup Configuration                         #
# (.setup.cfg)                                #
# Adapted from https://github.com/pybel/pybel #
###############################################
[metadata]
name = kgemb_sens
version = 0.0.1-dev
description = Assessing sensitivity of KG embedding methods to KG perturbations
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/dnsosa/kgemb-sens
#download_url = https://github.com/cthoyt-teaches-reproducibility/iter-together/releases
#project_urls =
#    Bug Tracker = https://github.com/cthoyt-teaches-reproducibility/iter-together/issues
#    Source Code = https://github.com/cthoyt-teaches-reproducibility/iter-together

# Author information
author = Daniel N. Sosa
author_email = dansosa19@gmail.com
maintainer = Daniel N. Sosa
maintainer_email = dansosa19@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
keywords =
    kgemb-sens

[options]
install_requires =
    click
    click-plugins
    networkx
    numpy
    pandas==1.3.5 #Required by pykeen dependency
    powerlaw
    pykeen
    #pykeen==1.6.0

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    iter-together = kgemb_sens.cli:main

#######################
# Doc8 Configuration  #
# (formerly doc8.ini) #
#######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (formerly .coveragerc) #
##########################
[coverage:run]
branch = True
source = kgemb_sens
omit =
    src/kgemb_sens/__main__.py
    src/kgemb_sens/cli.py
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/kgemb_sens
    .tox/*/lib/python*/site-packages/kgemb_sens

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
    if __name__ == '__main__':
